tests/baselines/reference/parser509669.errors.txt
==== tests/cases/compiler/parser509669.ts (1 errors) ====
    function foo():any {
     return ():void {};
                    ~
!!! parser509669.ts(2,17): error TS1005: '=>' expected.
    }